# advent-of-code

./: .gitignore  README.md
c_sharp/: c_sharp.sln
c_sharp/2023/day01/: Solution.cs
c_sharp/day01_part1/: Program.cs  day01_part1.csproj
c_sharp/day01_part1/Properties/: launchSettings.json
c_sharp/day01_part2/: Program.cs
c_sharp/day01_part2/Properties/: launchSettings.json
cpp/2023/: CMakeLists.txt  Makefile  README.md
cpp/2023/day01/: CMakeLists.txt  README.md  input.hpp  main.cc  part_one.hpp  part_two.hpp
cpp/2023/tests/: CMakeLists.txt
cpp/2023/tests/day01/: CMakeLists.txt  test_day01_part_one.cpp
go/: go.mod  go.sum  utils.go
go/2023/day01/: day01.go
go/2024/day01/: main.go  part1_optimized.go  part1_optimized_test.go  part1_test.go  part2_test.go
go/2024/day02/: main.go  part1_test.go  part2.go  part2_test.go
go/2024/day03/: main.go  part1_test.go  part2_test.go  regex_test.go
go/2024/day04/: main.go  part1_test.go  part2_test.go
go/2024/day05/: main.go  part1_test.go  part2_test.go
go/2024/day05_2/: day05.go  day05_test.go
go/2024/day06/: main.go  part1_test.go  puzzle.go
go/2024/day06_ebiten_ecs/: main.go
go/2024/day07/: main.go  part1_test.go  part2_test.go
go/2024/day07_2/: main.go  main_test.go
go/2024/day08/: main.go  part1_test.go
go/2024/day08_2/: day08.go  day08_test.go  main.go  main_test.go
go/2024/day09/: main.go  part1_test.go
go/2024/day12_ebiten_ecs/: main.go  main_test.go  puzzle.go
go/printmem/: printmem.go
tools/initaoc/: go.mod  main.go
tools/initaoc_for_cpp/: main.go
(+8 files in other folders)
